--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,11 @@ ANSIBLE_USER=ansible
 SSH_PRIVATE_KEY_PATH=~/.ssh/id_rsa
 SSH_PUBLIC_KEY_PATH=~/.ssh/id_rsa.pub
 
+# Vault Configuration
+VAULT_ADDR=https://test.ru
+VAULT_ROLE_ID=token
+VAULT_SECRET_ID=id
+
 # Optional: Secrets (if needed by your playbooks)
 # MYSQL_ROOT_PASSWORD=
 # APP_API_KEY=
