--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,9 @@
 [defaults]
+stdout_callback = default
+result_format = yaml
+
 inventory = inventory.yml
 timeout = 10
-stdout_callback = yaml
 host_key_checking = False
 retry_files_enabled = False
 
