--- a/playbooks/install/docker.yml
+++ b/playbooks/install/docker.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Docker, Docker Compose, and Lazydocker
-  hosts: all
+  hosts: "{{ host | default('none') }}"
   become: yes
 
   tasks:
